--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/reactjs-localstorage": "^1.0.2",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "reactjs-localstorage": "^1.0.1",
     "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
