--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
+    "particles.js": "^2.0.0",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
