--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@types/reactjs-localstorage": "^1.0.2",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.9",
@@ -17,6 +21,7 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
     "reactjs-localstorage": "^1.0.1",
     "remixicon-react": "^1.0.0"
   },
