--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-  "name": "my-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^7.3.4",
-    "@types/reactjs-localstorage": "^1.0.2",
-    "classnames": "^2.5.1",
-    "framer-motion": "^11.11.9",
-    "next": "14.2.15",
-    "particles.js": "^2.0.0",
-    "prettier": "^3.3.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-type-animation": "^3.2.0",
-    "reactjs-localstorage": "^1.0.1",
-    "remixicon-react": "^1.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "my-portfolio",
+    "version": "0.1.0",
+    "private": true,
+    "packageManager": "pnpm@9.12.0",
+    "engines": {
+        "node": "20.x"
+    },
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/icons-material": "^7.3.4",
+        "@mui/material": "^7.3.4",
+        "@types/reactjs-localstorage": "^1.0.2",
+        "classnames": "^2.5.1",
+        "framer-motion": "^11.11.9",
+        "next": "14.2.15",
+        "particles.js": "^2.0.0",
+        "prettier": "^3.3.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-type-animation": "^3.2.0",
+        "reactjs-localstorage": "^1.0.1",
+        "remixicon-react": "^1.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.15",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
