--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
         "@types/reactjs-localstorage": "^1.0.2",
         "classnames": "^2.5.1",
         "framer-motion": "^11.11.9",
+        "i18next": "^25.6.0",
+        "i18next-http-backend": "^3.0.2",
         "next": "14.2.15",
         "particles.js": "^2.0.0",
         "prettier": "^3.3.3",
         "react": "^18",
         "react-dom": "^18",
+        "react-i18next": "^16.0.1",
         "react-type-animation": "^3.2.0",
         "reactjs-localstorage": "^1.0.1",
         "remixicon-react": "^1.0.0"
