--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mui/material": "^7.3.4",
         "@types/reactjs-localstorage": "^1.0.2",
         "classnames": "^2.5.1",
+        "country-flag-icons": "^1.5.21",
         "framer-motion": "^11.11.9",
         "i18next": "^25.6.0",
         "i18next-http-backend": "^3.0.2",
