--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "type-check": "tsc --noEmit",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "prepare": "husky"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
@@ -44,6 +46,7 @@
         "@types/react-dom": "^18",
         "eslint": "^8",
         "eslint-config-next": "14.2.15",
+        "husky": "^9.1.7",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^30.2.0",
         "jest-environment-jsdom": "^30.2.0",
